# encoding_filter

./: .gitignore  CMakeLists.txt
include/: AppPipeline.hpp  EncodingDetector.hpp  FilterEngine.hpp  Logger.hpp
src/: AppPipeline.cpp  EncodingDetector.cpp  FilterEngine.cpp  Logger.cpp  main.cpp
